<resources>
    <string name="app_name">EV Sharing App</string>
    <string name="action_settings">Main Menu</string>
    <string name="titleAboutActivity">About us</string>

    <string name="loginNavigationMenu">Login Now</string>
    <string name="registerNavigationMenu">Register</string>
    <string name="profileNavigationMenu">My profile</string>
    <string name="mapNavigationMenu">Open Map</string>
    <string name="requestNavigationMenu">Request Vehicle</string>
    <string name="historyNavigationMenu">User History</string>
    <string name="aboutNavigationMenu">About Us</string>
    <string name="logoutNavigationMenu">Logout</string>
    <string name="titleNavigationMenu">MAIN NAVIGATION</string>
    <string name="settingsNavigationMenu">Settings</string>
    <string name="subitemsNavigationMenu">More</string>
    <string name="settings">Settings</string>
    <string name="about">About Us</string>

    <string name="titleMainActivity">User login</string>
    <string name="usernameMainActivity">Username</string>
    <string name="passwordMainActivity">Password</string>
    <string name="loginMainActivity">Login Now</string>
    <string name="infoMainActivity">or click here to register</string>
    <string name="registerMainActivity">Register</string>

    <string name="titleRegistrationActivity">User registration</string>
    <string name="nameRegistrationActivity">Full name</string>
    <string name="genderRegistrationActivity">Select gender</string>
    <string name="dobRegistrationActivity">Date of birth</string>
    <string name="usernameRegistrationActivity">Username [ email ]</string>
    <string name="passwordRegistrationActivity">Password</string>
    <string name="termsRegistrationActivity">By registering you agree to terms and conditions</string>
    <string name="registerRegistrationActivity">Register</string>

    <string name="titleProfileActivity">Welcome back</string>
    <string name="nameProfileActivity">Name</string>
    <string name="genderProfileActivity">Gender</string>
    <string name="dobProfileActivity">Date of Birth</string>
    <string name="infoProfileActivity">Main actions</string>
    <string name="requestProfileActivity">Request Vehicle</string>
    <string name="historyProfileActivity">User History</string>
    <string name="saveProfileActivity">Save Profile</string>
    <string name="switchProfileActivity">Edit mode disabled</string>

    <string name="titleRequestActivity">Request vehicle</string>
    <string name="nameRequestActivity">Name</string>
    <string name="startStationRequestActivity">From station</string>
    <string name="finishStationRequestActivity">Destination station</string>
    <string name="timeRequestActivity">Enter time</string>
    <string name="infoRequestActivity">Main actions</string>
    <string name="requestRequestActivity">Send Request</string>
    <string name="backRequestActivity">Back to Profile</string>

    <string name="titleAcceptedActivity">Vehicle request</string>
    <string name="nameAcceptedActivity">Your request is accepted and confirmed</string>
    <string name="infoAcceptedActivity">Main actions</string>
    <string name="backAcceptedActivity">Back to Profile</string>
    <string name="historyAcceptedActivity">User History</string>

    <string name="titleDeniedActivity">Vehicle request</string>
    <string name="nameDeniedActivity">Your request is denied try other settings</string>
    <string name="infoDeniedActivity">Main actions</string>
    <string name="backDeniedActivity">Back to Profile</string>
    <string name="historyDeniedActivity">User History</string>

    <string name="titleErrorActivity">Vehicle request</string>
    <string name="nameErrorActivity">Service is temporarily down try again later</string>
    <string name="infoErrorActivity">Main actions</string>
    <string name="backErrorActivity">Back to Profile</string>
    <string name="historyErrorActivity">User History</string>

    <string name="titleHistoryActivity">User History</string>
    <string name="infoHistoryActivity">Main actions</string>
    <string name="backHistoryActivity">Back to Profile</string>
    <string name="deleteHistoryActivity">Delete History</string>

    <string name="titleSettingsActivity">Settings</string>
    <string name="statusSettingsActivity">Service Status</string>
    <string name="ipaddressSettingsActivity">IP Address</string>
    <string name="portnumberSettingsActivity">Port Number</string>
    <string name="infoSettingsActivity">Main actions</string>
    <string name="switchSettingsActivity">Edit mode disabled</string>
    <string name="defaultsSettingsActivity">Load Defaults</string>
    <string name="saveSettingsActivity">Save Settings</string>
    <string name="backSettingsActivity">Back to Profile</string>
    <string name="onlineSettingsActivity">Service Status: ONLINE</string>
    <string name="offlineSettingsActivity">Service Status: OFFLINE</string>

    <string name="infoMapActivity">Info: Tap on two stations and click on the car icon</string>
    <string name="google_maps_API_key">AIzaSyD9Q-ESeWiREzVIjvohMwVaeHrM04Uk9UQ</string>

</resources>