<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="@string/titleSettingsActivity"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/titleTextView"
        android:layout_marginTop="20dp"
        android:text="@string/statusSettingsActivity"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/imageImageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/statusTextView"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/ic_offline_24dp" />

    <TextView
        android:id="@+id/ipaddressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageImageView"
        android:text="@string/ipaddressSettingsActivity"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/ipaddressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ipaddressTextView"
        android:inputType="number|numberDecimal"
        android:digits="0123456789."/>

    <TextView
        android:id="@+id/portnumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ipaddressEditText"
        android:text="@string/portnumberSettingsActivity"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/portnumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/portnumberTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="number" />

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/portnumberEditText"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/infoSettingsActivity"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/infoTextView"
        android:id="@+id/linearLayout1">

        <Switch
            android:id="@+id/switch1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="@string/switchSettingsActivity" />

        <Button
            android:id="@+id/defaultsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/defaultsSettingsActivity" />

    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout1"
        android:text="@string/saveSettingsActivity" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/saveButton"
        android:text="@string/backSettingsActivity" />

</RelativeLayout>