<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="@string/titleAcceptedActivity"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/titleTextView"
        android:layout_marginTop="20dp"
        android:text="@string/nameAcceptedActivity"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/imageImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/messageTextView"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/denied_512" />

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageImageView"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/infoAcceptedActivity"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/infoTextView"
        android:text="@string/backAcceptedActivity" />

    <Button
        android:id="@+id/historyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/backButton"
        android:layout_marginTop="2dp"
        android:text="@string/historyAcceptedActivity" />

</RelativeLayout>